feat(core): problems implemented

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <div class="container text-center">
         <h2 class="mb-4">База задач ЕГЭ</h2>
         <p class="lead mb-4">Более 10 готовых задач с решениями для подготовки</p>
-        <a href="/tasks/" class="btn btn-primary btn-lg">
+        <a href="/problems/" class="btn btn-primary btn-lg">
             <i class="bi bi-journal-text me-2"></i> Смотреть все задачи
         </a>
     </div>
