fix(core): excess content deleted from pages

--- a/templates/home/result.html
+++ b/templates/home/result.html
@@ -34,7 +34,7 @@
                             </div>
                             <div class="col-md-4 mb-3">
                                 <div class="p-3 bg-light rounded text-center">
-                                    <div class="display-4 fw-bold text-info">{{ total_score|floatformat:2 }}%</div>
+                                    <div class="display-4 fw-bold text-info">{{ percentage }}%</div>
                                     <div class="text-muted">Процент выполнения</div>
                                 </div>
                             </div>
